--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<script src="Module.js"></script>
-<script src="PeriodTable.js"></script>
-<script src="ModLoader.js"></script>
-<script src="Playback.js"></script>
+<script src="src/Module.js"></script>
+<script src="src/PeriodTable.js"></script>
+<script src="src/ModLoader.js"></script>
+<script src="src/Playback.js"></script>
 <input id="file-select" type="file"><br>
-<input id="position" type="number">
+<input id="position" type="number" value="0">
 <button onclick="readFiles()">Read Files</button>
 
 <script>
