--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <div>Pos: <span id="pos"></span></div>
 <div>Pat: <span id="pat"></span></div>
 <div>Row: <span id="row"></span></div>
+<div>Tempo: <span id="tempo"></span></div>
+<div>Speed: <span id="speed"></span></div>
 <div>Active samplers: <span id="samplers"></span></div>
 
 <script>
@@ -38,8 +40,10 @@
 
       let process = () => {
         while (playback.time < context.currentTime + 0.5) {
-          queuedLines.push({time: playback.time, pos: playback.pos, row: playback.row});
+          let {time, pos, row} = playback;
           processRow(playback);
+          let {tempo, speed} = playback;
+          queuedLines.push({time, pos, row, tempo, speed});
         }
       };
       process();
@@ -68,6 +72,8 @@
       query('#pos').textContent = curLine.pos;
       query('#pat').textContent = playback.mod.sequence[curLine.pos];
       query('#row').textContent = curLine.row;
+      query('#tempo').textContent = curLine.tempo;
+      query('#speed').textContent = curLine.speed;
     }
     query('#samplers').textContent = playback.activeSources;
   }
