--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
   }
 
   function play(resume) {
+    if (!module)
+      return;
     if (!context)
       context = new AudioContext({latencyHint: 'playback'});
+    if (playback)
+      stop();
     playback = initPlayback(context, module);
     if (resume) {
       playback.pos = query('#pos').valueAsNumber;
@@ -71,10 +75,13 @@
   }
 
   function stop() {
-    stopPlayback(playback);
-    clearInterval(intervalHandle);
-    cancelAnimationFrame(animHandle);
-    queuedLines = [];
+    if (playback) {
+      stopPlayback(playback);
+      clearInterval(intervalHandle);
+      cancelAnimationFrame(animHandle);
+      queuedLines = [];
+      playback = null;
+    }
   }
 
   function update() {
