--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <script src="src/ModLoader.js"></script>
 <script src="src/Playback.js"></script>
 
-<input id="file-select" type="file"><br>
-<button onclick="loadFile()">Load</button>
+<input id="file-select" type="file">
+<button onclick="loadFile()">Load</button><br>
 <button onclick="play()">Play</button>
 <button onclick="play(true)">Play from</button>
 <button onclick="stop()">Stop</button><br>
