--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
   function update() {
     animHandle = requestAnimationFrame(update);
 
+    let curTime = context.currentTime - context.outputLatency;
     if (queuedLines.length) {
       let i = 0;
-      while (i < (queuedLines.length - 1) && queuedLines[i + 1].time <= context.currentTime)
+      while (i < (queuedLines.length - 1) && queuedLines[i + 1].time <= curTime)
         i++;
       queuedLines.splice(0, i);
       let curLine = queuedLines[0];
