--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <button onclick="play(true)">Play from</button>
 <button onclick="stop()">Stop</button><br>
 <div>Title: <span id="title"></span></div>
-<select id="sequence" size="10" style="width:30pt"></select>
-<select id="samples" size="10" style="width:130pt"></select>
+<select id="sequence" multiple size="10" style="width:30pt"></select>
+<select id="samples" multiple size="10" style="width:130pt"></select>
 <div>Row: <input type="number" size="6" id="row"></div>
 <div>Tempo: <input type="number" size="6" id="tempo"></div>
 <div>Speed: <input type="number" size="6" id="speed"></div>
