--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<style>
+  body {
+    height: 100%;
+    overflow: hidden;
+  }
+</style>
 
 <script src="src/Module.js"></script>
 <script src="src/PeriodTable.js"></script>
