--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
   function update() {
     animHandle = requestAnimationFrame(update);
 
-    let curTime = context.currentTime - context.outputLatency;
+    let curTime = context.currentTime;
+    if (context.outputLatency) // if supported
+      curTime -= context.outputLatency;
     if (queuedLines.length) {
       let i = 0;
       while (i < (queuedLines.length - 1) && queuedLines[i + 1].time <= curTime)
