--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       clearInterval(intervalHandle);
       cancelAnimationFrame(animHandle);
       queuedLines = [];
+      queuedTime = 0;
       playback = null;
     }
   }
