--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <style>
   body {
+    width: 100%;
     height: 100%;
+    margin:0;
     overflow: hidden;
     position: fixed;
   }
@@ -49,13 +51,16 @@
   <input type="checkbox" onchange="muteCheck(2, this.checked)" checked>
   <input type="checkbox" onchange="muteCheck(3, this.checked)" checked>
 </div>
-<div>
+<div style="display:flex">
   Jam pitch:
-  <input type="range" min="0" max="59" id="jam-pitch-range" oninput="query('#jam-pitch').value=this.value">
+  <input style="flex-grow:1" type="range" min="0" max="59" id="jam-pitch-range"
+    oninput="query('#jam-pitch').value=this.value;jamUp();jamDown()"
+    onmousedown="jamDown()" onmouseup="jamUp()" ontouchstart="jamDown()" ontouchend="jamUp()">
   <input type="number" size="6" value="36" id="jam-pitch" oninput="query('#jam-pitch-range').value=this.value">
   <button onmousedown="jamDown(event)" onmouseup="jamUp(event)"
     ontouchstart="jamDown(event)" ontouchend="jamUp(event)">Jam</button>
-  <button onclick="writeCell()">Write</button>
+  <button onmousedown="jamDown(event); writeCell()" onmouseup="jamUp(event)"
+    ontouchstart="jamDown(event); writeCell()" ontouchend="jamUp(event)">Write</button>
 </div>
 <div style="height:200pt; overflow-y:auto;">
   <table id="pattern-table" style="font-family:monospace;"></table>
@@ -189,7 +194,8 @@
   }
 
   function jamDown(e) {
-    e.preventDefault();
+    if (e)
+      e.preventDefault();
     if (playback) {
       let s = query('#samples').selectedIndex;
       if (s > 0)
@@ -198,7 +204,8 @@
   }
 
   function jamUp(e) {
-    e.preventDefault();
+    if (e)
+      e.preventDefault();
     if (playback)
       jamRelease(playback);
   }
@@ -275,6 +282,7 @@
     console.log(module);
     if (playback)
       playback.module = module;
+    selRow++;
     refreshPattern();
   }
 </script>
