--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
   <button onclick="play()">Play</button>
   <button onclick="play(true)">Play from</button>
   <button onclick="stop()">Stop</button>
+  <button onclick="patternZap()">Pattern Zap</button>
 </div>
 <div>Title: <span id="title"></span></div>
 <select id="sequence" size="10" style="width:30pt"></select>
 <select id="samples" size="10" style="width:130pt"></select>
-<div>Row: <input type="number" size="6" id="row"></div>
-<div>Tempo: <input type="number" size="6" id="tempo"></div>
-<div>Speed: <input type="number" size="6" id="speed"></div>
+<div>Row: <input style="width:36pt;" type="number" id="row"></div>
+<div>
+  Tempo: <input style="width:36pt;" type="number" id="tempo">
+  Speed: <input style="width:36pt;" type="number" id="speed">
+</div>
 <div>Active samplers: <span id="samplers"></span></div>
 <div>Time: <span id="time"></span></div>
 <div>Queued time: <span id="queued"></span></div>
@@ -176,13 +179,7 @@
 
       query('#title').textContent = module.name;
 
-      let seqElem = query('#sequence');
-      seqElem.textContent = '';
-      for (let [i, pos] of module.sequence.entries()) {
-        let option = document.createElement('option')
-        option.textContent = pos;
-        seqElem.appendChild(option);
-      }
+      refreshSequence();
 
       let samplesElem = query('#samples');
       samplesElem.textContent = '';
@@ -304,6 +301,16 @@
     query('#time').textContent = context.currentTime.toFixed(3);
   }
 
+  function refreshSequence() {
+    let seqElem = query('#sequence');
+    seqElem.textContent = '';
+    for (let [i, pos] of module.sequence.entries()) {
+      let option = document.createElement('option')
+      option.textContent = pos;
+      seqElem.appendChild(option);
+    }
+  }
+
   function refreshPattern() {
     let pattern = module.patterns[curPatternIdx];
     if (pattern != curPattern) {
@@ -337,6 +344,19 @@
       existing.classList.remove('sel-cell');
     if (selRow >= 0 && selChannel >= 0)
       query('#pattern-table').children[selRow].children[selChannel].classList.add('sel-cell');
+  }
+
+  function patternZap() {
+    let newMod = Object.assign(new Module(), module);
+    newMod.patterns = Object.freeze([...Array(16)].map(() =>
+      Object.freeze([...Array(module.numChannels)].map(() =>
+        Object.freeze([...Array(numRows)].map(() =>
+          Object.freeze(new Cell()))))))); // lisp is so cool
+    newMod.sequence = Object.freeze([...Array(16).keys()]);
+    module = newMod;
+    playback.module = newMod;
+    refreshSequence();
+    refreshPattern();
   }
 
   function writeCell() {
